Fix ag grid theme wrapping cells (#3087)

--- a/packages/ag-grid-theme/css/_salt-ag-theme-mixin.scss
+++ b/packages/ag-grid-theme/css/_salt-ag-theme-mixin.scss
@@ -349,10 +349,6 @@
     padding-right: var(--salt-spacing-100);
   }
 
-  .ag-cell-wrapper {
-    height: 100%;
-  }
-
   .ag-ltr .ag-cell {
     border: none;
     line-height: calc(
